# AppstreamPopcon

./: AppStreamPopcon.cpp  AppStreamPopcon.h  CMakeLists.txt  README.md  main.cpp
